--- a/css/style.css
+++ b/css/style.css
@@ -593,6 +593,12 @@ ul, li {
   }
 }
 @media (max-width: 480px) {
+  .home{
+    padding-top-170px
+  }
+  .home__subtitle{
+    font-size: 40px;
+  }
   .follow__form .email {
     border-radius: 30px;
   }
